   dealing with bugnotes.
 * Reordered the config_inc.php file items
 * Added a logout redirect page variable for the logout page
 * Fixed show source problem
 * Removed get_current_user_id() and replaced with calls to
   get_current_user_field( "id" )
 * Added reopen bug dialog
 * Added $g_bug_reopen_page and removed $g_bug_reopen
 * Added bug_reopen_page.php3 and removed bug_reopen.php3
 * Added $g_bug_resolve_page and bug_resolve_page.php3
 * Modified the appearance of the advanced view and update
 * Split the account pref modifications into two spearate files:
   account_prefs_update.php3 and account_prefs_reset.php3
 * Removed db_mysql_error()
 *

12.20.2000	-	0.12.0

 * Fixed problem with viewing filters not working with Netscape
 * Tweaked the string_edit() function
 * Added $g_show_login_date_info and the ability to show who is logged in and
   the current time
 * Modified bugnotes to be ordered by date_submitted
 * Added protection to prevent anyone from deleting bugnotes
 * Used LAST_INSERT_ID() to ensure that bug and bugnote insertion is correct
 * Reporting a bug now stores a link to the account profile (if chosen)
 * The information from the profile is displayed (if chosen at report time) in
   the advanced bug view
 * Added a hide resolved viewing filter option
 * Summary shows time statistics for resolved bugs
 * Added support to show bugs reported by and assigned to the logged in user.
 * Added view_user_assigned_bug_page.php3 and view_user_reported_bug_page.php3
   and the corresponding global variables
 * Tweaked the bug update and bugnote update and delete functions to redirect
   to the user chosen default viewing level page

12.15.2000	-	0.11.1

 * Added projection and eta to be passed as hidden info by the simple update
   page.
 * Fixed a missing </TD> tag on the report bug pages.  Messed up old 4.x unix
   Netscape.
 * Modified the priority to print counts of all bugs.