@@ -22,7 +22,7 @@
     $query = "SELECT *
     		FROM $g_mantis_user_table
 			WHERE cookie_string='$g_string_cookie_val'";
-    $result = db_mysql_query( $query );
+    $result = db_query( $query );
 	$row = mysql_fetch_array( $result );
 	if ( $row ) {
 		extract( $row, EXTR_PREFIX_ALL, "u" );
