@@ -32,7 +32,7 @@
 		$query = "SELECT id
 				FROM $g_mantis_user_table
 				WHERE cookie_string='$g_string_cookie_val'";
-		$result = db_mysql_query( $query );
+		$result = db_query( $query );
 		$u_id = mysql_result( $result, 0 );
 
 		### Make strings safe for database
@@ -53,7 +53,7 @@
 			$query = "SELECT id, platform, os, os_build, default_profile
 				FROM $g_mantis_user_profile_table
 				WHERE id='$f_id'";
-		    $result = db_mysql_query( $query );
+		    $result = db_query( $query );
 		    $profile_count = mysql_num_rows( $result );
 
 			$row = mysql_fetch_array( $result );
