@@ -20,14 +20,14 @@
     $query = "SELECT *
     		FROM $g_mantis_bug_table
     		WHERE id='$f_id'";
-    $result = db_mysql_query( $query );
+    $result = db_query( $query );
 	$row = mysql_fetch_array( $result );
 	extract( $row, EXTR_PREFIX_ALL, "v" );
 
     $query = "SELECT *
     		FROM $g_mantis_bug_text_table
     		WHERE id='$v_bug_text_id'";
-    $result = db_mysql_query( $query );
+    $result = db_query( $query );
 	$row = mysql_fetch_array( $result );
 	extract( $row, EXTR_PREFIX_ALL, "v2" );
 
